[tool.poetry]
name = "project1-andrey-bykov-dpo"
version = "0.1.0"
description = ""


readme = "README.md"

license = "0"  # Usually license is specified differently, e.g., "MIT"

packages = [{ include = "labyrinth_game" }]


[build-system]

requires = ["poetry-core>=2.0.0,<3.0.0"]

build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"
