[tool.poetry]
name = "project1-andrey-bykov-dpo"
version = "0.1.0"
description = ""
readme = "README.md"
license = "0"  # Usually license is specified differently, e.g., "MIT"
packages = [{ include = "labyrinth_game" }]

[tool.poetry.dependencies]
python = ">=3.7"


[build-system]

requires = ["poetry-core>=2.0.0,<3.0.0"]

build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"


[tool.ruff]
line-length = 150

exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []


[dependency-groups]
dev = [
    "ruff (>=0.14.8,<0.15.0)"
]
